# fastapi-postgresql

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
db/: data.sql  schema.sql
scripts/: run_psycopg.py
src/app_frontend/app/: app.py  chevron_up.py  clipboard_component.py  data_component.py  name_cell_component.py  row.py  table.py  user_table.py
src/app_psycopg/api/: app.py  dependencies.py  lifespan.py  models.py  pagination.py  sorting.py
src/app_psycopg/api/dependencies/: companies.py  db.py  documents.py  orders.py  professions.py  users.py  (+1 more)
src/app_psycopg/db/: db.py  db_models.py  db_statements.py
src/app_sqlalchemy/api/: app.py  dependencies.py  lifespan.py  models.py  pagination.py  sorting.py
src/app_sqlalchemy/db/: db_models.py
src/app_sqlalchemy_core/api/: app.py  dependencies.py  filters.py  lifespan.py  models.py  pagination.py  sorting.py
src/app_sqlalchemy_core/db/: models.py
src/app_sqlalchemy_orm/api/: app.py  dependencies.py  models.py
src/app_sqlalchemy_orm/db/: db_models.py
src/common/: models.py  order_by_enums.py  pagination.py  schemas.py  sorting.py
src/common/sqlalchemy/: db.py  dependencies.py  lifespan.py  pagination.py  sorting.py
tests/: README.md
tests/app_psycopg/: conftest.py  test_company.py  test_db.py  test_dependencies.py  test_documents.py  test_orders.py  test_pagination.py  test_profession.py  test_sorting.py  test_user_company_links.py  test_users.py
tests/app_sqlalchemy/: conftest.py  test_dependencies.py  test_documents.py  test_orders.py  test_sorting.py  test_users.py
(+31 files in other folders)
