[project]
name = "fastapi-postgresql"
version = "0.1.0"
description = "Use PostgreSQL with FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "psycopg[pool]>=3.2.6",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
    "sqlfluff>=3.4.0",
]
